minor bug fixed for overflow content

--- a/src/app/classr-page-entry/classr-page-entry.component.css
+++ b/src/app/classr-page-entry/classr-page-entry.component.css
@@ -70,7 +70,7 @@
 
 .professorimagenamediv.card {
   width: 100%;
-  height: 800px;
+  height: auto;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -122,22 +122,23 @@
   height: 93%;
   background-color: #fff;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-start;
   margin: 20px 20px 20px 0;
   padding: 24px;
   display: flex;
 }
 
-.profinfodiv.card.adjustedclass {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-right: 0;
-}
-
 .profinfodiv.card.averagehoursweekly {
   justify-content: center;
   align-items: center;
+}
+
+.profinfodiv.card.classinfo {
+  height: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 0;
 }
 
 .sliderobjects {
@@ -179,8 +180,8 @@
 .stronglyagreeordiss {
   width: 95%;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
+  justify-content: flex-start;
+  align-items: center;
   margin-top: 5px;
   display: flex;
 }
@@ -264,10 +265,6 @@
   margin-bottom: 15px;
 }
 
-.spacerhoriz.hrsweekdiv {
-  margin-top: 37px;
-}
-
 .contactdiv, .educationdiv {
   flex-direction: column;
   justify-content: center;
@@ -313,6 +310,20 @@
 
 
 
+
+.professorimage.card {
+  height: 600px;
+  background-position: 50%;
+  margin: 0;
+}
+
+
+
+.searchdiv {
+  width: 70%;
+  margin-right: 20px;
+}
+
 .coursedescription.email {
   line-height: 30px;
 }
@@ -327,22 +338,15 @@
   margin-bottom: 0;
   margin-right: 13px;
   font-family: Inter, sans-serif;
-  font-size: 80px;
+  font-size: 90px;
 }
 
 .hourcontent {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin-bottom: 11px;
   display: flex;
-}
-
-.heading-10 {
-  margin-top: 0;
-  margin-bottom: 0;
-  font-family: Inter, sans-serif;
-  font-size: 20px;
-  line-height: 20px;
 }
 
 .heading-11 {
@@ -353,13 +357,8 @@
   font-family: Inter, sans-serif;
 }
 
-.hoursdesriptiondiv {
-  width: 100%;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-  display: flex;
+.heading-11.hrsweekly {
+  font-size: 48px;
 }
 
 @media screen and (max-width: 991px) {
@@ -384,7 +383,7 @@
   }
 
   .professorimagenamediv.card {
-    height: 500px;
+    height: auto;
   }
 
   .dataspecificgridwrap {
