--- a/src/app/professor-page-entry/professor-page-entry.component.css
+++ b/src/app/professor-page-entry/professor-page-entry.component.css
@@ -53,7 +53,7 @@
 
 .professorimagenamediv.card {
   width: 100%;
-  height: 800px;
+  height: auto;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -260,7 +260,7 @@
   }
 
   .professorimagenamediv.card {
-    height: 500px;
+    height: auto;
   }
 
   .dataspecificgridwrap {
